# happybara

./: .gitignore  .gitmodules  .travis.yml  README.md  TODO  init-sandboxes.sh
happybara/: TODO  happybara.cabal
happybara-demo/: LICENSE  happybara-demo.cabal
happybara-demo/src/: demo.hs
happybara-webkit/: README.md  Setup.hs  TODO  happybara-webkit.cabal
happybara-webkit-server/: Vagrantfile  happybara-webkit-server.cabal
happybara-webkit-server/src/Happybara/WebKit/: Server.hs
happybara-webkit/demo/: demo.hs
happybara-webkit/src/Happybara/: Classes.hs  Driver.hs  Monad.hs  Query.hs  WebKit.hs  XPath.hs
happybara-webkit/src/Happybara/WebKit/: Classes.hs  Commands.hs  Driver.hs  Exceptions.hs  Monad.hs  Session.hs  XPath.hs
happybara/src/: Happybara.hs
happybara/src/Happybara/: CSS.hs  Driver.hs  Exceptions.hs  Monad.hs  Node.hs  Queries.hs  Query.hs  XPath.hs
happybara/test/Happybara/: CSSSpec.hs  XPathSpec.hs
