name:                happybara-demo
version:             0.0.1
synopsis:            Simple Happybara demo application
homepage:            https://github.com/cstrahan/happybara
license:             MIT
license-file:        LICENSE
author:              Charles Strahan
maintainer:          charles.c.strahan@gmail.com
copyright:           Copyright (c) 2014 Charles Strahan
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable             demo
  main-is:             demo.hs
  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.7,
                       process,
                       directory,
                       network,
                       word8,
                       bytestring,
                       mtl,
                       monad-control,
                       lifted-base,
                       data-default,
                       transformers-base,
                       text,
                       http-types,
                       vector,
                       aeson,
                       case-insensitive,
                       happybara,
                       happybara-webkit,
                       happybara-webkit-server
  ghc-options:       -threaded -O2
