name:                happybara-webkit-server
version:             0.0.1
synopsis:            WebKit Server binary for Happybara (taken from Capybara-Webkit)
homepage:            https://github.com/cstrahan/happybara/happybara-webkit-server
license:             MIT
license-file:        LICENSE
author:              Charles Strahan
maintainer:          charles.c.strahan@gmail.com
copyright:           Copyright (c) 2014 Charles Strahan
category:            Development
build-type:          Custom
cabal-version:       >=1.10

-- data-files:       <see Setup.hs>
data-dir:            data/

library
  exposed-modules:     Happybara.WebKit.Server
  other-modules:       Paths_happybara_webkit_server
  build-depends:       base >=4.6 && <4.7,
                       process,
                       directory,
                       filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
