name:                happybara
version:             0.0.1
synopsis:            Web application testing, and scraping, DSL
homepage:            https://github.com/cstrahan/happybara
license:             MIT
license-file:        LICENSE
author:              Charles Strahan
maintainer:          charles.c.strahan@gmail.com
copyright:           Copyright (c) 2014 Charles Strahan
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Happybara,
                       Happybara.Driver,
                       Happybara.Exceptions,
                       Happybara.Monad,
                       Happybara.Query,
                       Happybara.XPath
  build-depends:       base >=4.6 && <4.7,
                       mtl,
                       monad-control,
                       lifted-base,
                       transformers,
                       transformers-base,
                       time,
                       text,
                       http-types,
                       filepath,
                       aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
